Add navigation links and update content in index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
 <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque.</h1>
+<div>
+  <ul>
+    <li><a href="Home"></a></li>
+    <li><a href="Products"></a></li>
+    <li><a href="Help"></a></li>
+    <li><a href="About"></a></li>
+  </ul>
+</div>
+<p>In the develop branch</p>
 </body>
 </html>
